--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "josephjamescoop",
+  "homepage": "http://josephjamescoop.github.io/joseph-cooper",
+  "name": "joseph-cooper",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
