--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-iframe": "^1.8.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
