--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://josephjamescoop.github.io/photo-port",
+  "homepage": "http://josephjamescoop.github.io/joseph-cooper",
   "name": "josephjamescoop",
   "version": "0.1.0",
   "private": true,
